# ambient-expense-agent

./: Makefile  agent_development_playbook.py  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
artifacts/grade_results/: results_20260621_004529.html  results_20260621_004529.json  results_20260621_005117.html  results_20260621_005117.json  results_20260621_005437.html  results_20260621_005437.json
artifacts/traces/: generated_traces.json
expense_agent/: agent.py  config.py  fast_api_app.py
submission_frontend/: Dockerfile  main.py  pyproject.toml
tests/eval/: eval_config.yaml  generate_traces.py  run_grade.py
tests/eval/datasets/: basic-dataset.json
tests/unit/: test_workflow.py
