[project]
name = "submission-frontend"
version = "0.1.0"
description = "FastAPI dashboard and API client for the Ambient Expense Agent"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform[agent-engines]>=1.156.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
